# OpenGLCrashCourse

./: .gitattributes  .gitignore  CMakeLists.txt  EBO.cpp  LICENSE.txt  Main.cpp  OpenGLCrashCourse.sln  OpenGLCrashCourse.vcxproj  OpenGLCrashCourse.vcxproj.filters  README.md  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  default.frag  default.vert  glad.c  shaderClass.cpp  shaderClass.h
Libraries/include/glad/: glad.h
Libraries/lib/: glfw3.lib
include/: Camera.h  EBO.h  ShaderClass.h  Texture.h  VAO.h  VBO.h  camera.h  shaderClass.h  shader_program.h  texture.h
include/glad/: glad.h
resources/xmas-model/: Xmas_House_Exterior.mtl
shaders/: color.frag  color.vert  default.frag  default.vert  emissive.vert  model.frag  model.vert
src/: Camera.cpp  EBO.cpp  Main.cpp  ShaderClass.cpp  Texture.cpp  VAO.cpp  VBO.cpp  camera.cpp  glad.c  main.cpp  shaderClass.cpp  shader_program.cpp  stb.cpp  texture.cpp
src/scene/: camera.cpp  camera.h
src/texture/: texture.h
src/util/: EBO.cpp  EBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  model.cpp  model.h  model_loader.cpp  model_loader.h  shader_program.cpp  shader_program.h  texture.cpp  texture.h  vertex.h
